Fixed footer alignment in low res screens

--- a/src/scenes/Home/components/Footer/styles.css
+++ b/src/scenes/Home/components/Footer/styles.css
@@ -8,7 +8,7 @@
     margin-left: 5px;
 }
 
-@media screen and (min-height: 800px){
+@media screen and (min-height: 700px){
     .footer{
         position: fixed;
         width: 100%;
